View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026165 | Open CASCADE | OCCT:Visualization | public | 2015-04-29 15:31 | 2015-05-14 16:39 |
Reporter | kgv | Assigned To | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0026165: Visualization, TKOpenGl - fix FBO blitting on some mobile devices | ||||
Description | The FBO blitting code does not work on Tegra 3 (Nexus 7 2012) and Apple A8X (iPad) for several reasons. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26165 has been created by kgv. SHA-1: caffd242ad6bead997d8aee11ba2945512b262c0 Detailed log of new commits: Author: kgv Date: Wed Apr 29 15:59:02 2015 +0300 0026165: Visualization, TKOpenGl - fix FBO blitting on some mobile devices OpenGl_Texture::Init() - initialize FBO textures with GL_TEXTURE_WRAP_ set to GL_CLAMP_TO_EDGE, since some devices do not support GL_REPEAT (which is default) in such combination. OpenGl_FrameBuffer::Init() create Depth render buffer object instead of texture on devices which do not support GL_DEPTH24_STENCIL8. |
|
Patch is ready for review. |
|
Please test the patch. |
|
Dear BugMaster, Branch CR26165 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: caffd242ad6bead997d8aee11ba2945512b262c0 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 94704922 / 94535582 [+0.18%] Total CPU difference: 56244.42999999974 / 51017.65999999946 [+10.25%] Testing on Windows: Total MEMORY difference: 57255669 / 57265426 [-0.02%] Total CPU difference: 15842.541154098972 / 15810.919751398971 [+0.20%] There are differences in images found by testdiff: http://occt-tests/CR26165-master-occt-64/Debian60-64/diff-Debian60-64.html http://occt-tests/CR26165-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html Please, pay attention to: 3rdparty fonts A2, B1, B2 demo samples penrose bugs vis bug23652, bug25732_1 |
|
Branch CR26165 has been updated by kgv. SHA-1: b079a05871a7757f2dee85a4ead3a0b86714a7da Detailed log of new commits: Author: kgv Date: Wed May 6 16:04:24 2015 +0300 OpenGl_Font::createTexture() - define texture parameters explicitly |
|
Branch CR26165_1 has been created by kgv. SHA-1: 2617287c7fc945f9101e029a4cee05575f301714 Detailed log of new commits: Author: kgv Date: Wed May 6 16:05:47 2015 +0300 0026165: Visualization, TKOpenGl - fix FBO blitting on some mobile devices OpenGl_Texture::Init() - initialize FBO textures with GL_TEXTURE_WRAP_ set to GL_CLAMP_TO_EDGE, since some devices do not support GL_REPEAT (which is default) in such combination. OpenGl_Font::createTexture() - define texture parameters explicitly. OpenGl_FrameBuffer::Init() create Depth render buffer object instead of texture on devices which do not support GL_DEPTH24_STENCIL8. |
|
Updated patch should fix the regression. |
|
Branch CR26165_1 has been updated forcibly by apv. SHA-1: 9986ae7d48a7ac7b0b3bcd6753a677797c85310a |
|
Branch CR26165_1 has been rebased on IR-2015-04-30 |
|
Dear BugMaster, Branch CR26165_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 9986ae7d48a7ac7b0b3bcd6753a677797c85310a Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 94923172 / 94931310 [-0.01%] Total CPU difference: 51857.06999999942 / 52847.099999999504 [-1.87%] Testing on Windows: Total MEMORY difference: 58618903 / 58707136 [-0.15%] Total CPU difference: 16832.78870179899 / 16853.833236698807 [-0.12%] |
|
Branch CR26165 has been deleted by inv. SHA-1: b079a05871a7757f2dee85a4ead3a0b86714a7da |
|
Branch CR26165_1 has been deleted by inv. SHA-1: 9986ae7d48a7ac7b0b3bcd6753a677797c85310a |
occt: master fe3a29bc 2015-05-06 13:05:47
Committer: abv Details Diff |
0026165: Visualization, TKOpenGl - fix FBO blitting on some mobile devices OpenGl_Texture::Init() - initialize FBO textures with GL_TEXTURE_WRAP_ set to GL_CLAMP_TO_EDGE, since some devices do not support GL_REPEAT (which is default) in such combination. OpenGl_Font::createTexture() - define texture parameters explicitly. OpenGl_FrameBuffer::Init() create Depth render buffer object instead of texture on devices which do not support GL_DEPTH24_STENCIL8. |
Affected Issues 0026165 |
|
mod - src/OpenGl/OpenGl_Font.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_FrameBuffer.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_FrameBuffer.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_Texture.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Workspace.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-04-29 15:31 | kgv | New Issue | |
2015-04-29 15:31 | kgv | Assigned To | => kgv |
2015-04-29 15:59 | git | Note Added: 0040428 | |
2015-04-29 16:26 | kgv | Note Added: 0040434 | |
2015-04-29 16:26 | kgv | Assigned To | kgv => san |
2015-04-29 16:26 | kgv | Status | new => resolved |
2015-04-29 18:16 | kgv | Description Updated | |
2015-04-30 14:32 | kgv | Note Added: 0040476 | |
2015-04-30 14:32 | kgv | Assigned To | san => bugmaster |
2015-04-30 14:32 | kgv | Status | resolved => reviewed |
2015-04-30 14:32 | kgv | Relationship added | child of 0025146 |
2015-04-30 14:32 | kgv | Relationship added | child of 0025745 |
2015-04-30 17:10 |
|
Assigned To | bugmaster => apv |
2015-05-06 14:52 |
|
Test case number | => Not needed |
2015-05-06 15:32 |
|
Note Added: 0040632 | |
2015-05-06 15:32 |
|
Assigned To | apv => kgv |
2015-05-06 15:32 |
|
Status | reviewed => assigned |
2015-05-06 15:33 |
|
Note Edited: 0040632 | |
2015-05-06 16:04 | git | Note Added: 0040637 | |
2015-05-06 16:06 | git | Note Added: 0040638 | |
2015-05-06 16:06 | kgv | Note Added: 0040639 | |
2015-05-06 16:06 | kgv | Assigned To | kgv => bugmaster |
2015-05-06 16:06 | kgv | Status | assigned => resolved |
2015-05-06 16:06 | kgv | Status | resolved => reviewed |
2015-05-06 16:40 |
|
Assigned To | bugmaster => apv |
2015-05-06 17:43 | git | Note Added: 0040650 | |
2015-05-06 17:44 |
|
Note Added: 0040651 | |
2015-05-07 12:10 |
|
Note Added: 0040709 | |
2015-05-07 12:10 |
|
Assigned To | apv => bugmaster |
2015-05-07 12:10 |
|
Status | reviewed => tested |
2015-05-08 15:49 |
|
Changeset attached | => occt master fe3a29bc |
2015-05-08 15:49 |
|
Assigned To | bugmaster => abv |
2015-05-08 15:49 |
|
Status | tested => verified |
2015-05-08 15:49 |
|
Resolution | open => fixed |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:30 |
|
Fixed in Version | => 6.9.0 |
2015-05-14 16:39 | git | Note Added: 0041128 | |
2015-05-14 16:39 | git | Note Added: 0041129 |